--- a/_includes/metadata.html
+++ b/_includes/metadata.html
@@ -26,7 +26,7 @@
 <meta property="dc:date" content="{{ page.date }}" />
 <meta property="dc:format" content="text/html" />
 <meta property="dc:language" content="en" />
-<meta property="dc:identifier" content="{{ page.url }}" />
+<meta property="dc:identifier" content="{{ site.url }}{{ site.baseurl }}{{ page.url }}" />
 <meta property="dc:rights" content="CC-BY" />
 <meta property="dc:source" content="{{ site.title }}" />
 <meta property="dc:subject" content="Physics" />
@@ -51,7 +51,7 @@
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@{{site.author.twitter}}" />
 <meta name="twitter:title" content="{{ page.title }}" />
-<meta name="twitter:description" content="{{ page_description }}" />
-<meta name="twitter:image" content="{{ site.baseurl }}/assets/img/qi2016.jpg" />
+<meta name="twitter:description" content="{{ page.description }}" />
+<meta name="twitter:image" content="{{ site.url }}{{ site.baseurl }}/assets/img/qi2016.jpg" />
 <!-- Baidu website verification code -->
 <meta name="baidu-site-verification" content="{{site.baiduid}}" />
