--- a/_includes/search.html
+++ b/_includes/search.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/rosario" type="text/css"/>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-    <link href = "{{ site.url }}{{ site.baseurl }}/assets/css/bootstrap.min.css" rel = "stylesheet">
+    <link href = "{{ site.baseurl }}/assets/css/bootstrap.min.css" rel = "stylesheet">
     <!-- Tipue search stylesheet -->
-    <link href="{{ site.url }}{{ site.baseurl }}/assets/css/tipuesearch.css" rel="stylesheet" type="text/css">
+    <link href="{{ site.baseurl }}/assets/css/tipuesearch.css" rel="stylesheet" type="text/css">
   </head>
 
   <!-- Go to www.addthis.com/dashboard to customize your tools -->
@@ -31,7 +31,7 @@
 
 <header class="jumbotron subhead">
   <div class="inner">
-    <form class="well form-search pull-right" method="get" action="{{ site.url }}{{ site.baseurl }}/search.html">
+    <form class="well form-search pull-right" method="get" action="{{ site.baseurl }}/search.html">
           <input class="search-query" type="text" name="q" id="tipue_search_input" placeholder="Search">
     </form>
     <h1 class="entry-title">{{ page.title }}</h1>
@@ -71,9 +71,9 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- search using tipuesearch -->
     <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.4.min.js"></script>
-    <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/tipuesearch_set.js"></script>
-    <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/tipuesearch_data.js"></script>
-    <script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/tipuesearch.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/assets/js/tipuesearch_set.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/assets/js/tipuesearch_data.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/assets/js/tipuesearch.js"></script>
     <!-- Equations using MathJax -->
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: {autoNumber: "all"} } });       </script>
